--- a/slidetoact/src/main/res/values/attrs.xml
+++ b/slidetoact/src/main/res/values/attrs.xml
@@ -2,7 +2,7 @@
 <resources>
     <declare-styleable name="SlideToActView">
         <attr name="text" format="string" />
-        <attr name="text_size" format="dimension" />
+        <attr name="slidetoact_text_size" format="dimension" />
         <attr name="text_style" format="enum">
             <enum name="normal" value="0" />
             <enum name="bold" value="1" />
