--- a/slidetoact/src/main/res/values/styles.xml
+++ b/slidetoact/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
 <resources>
     <style name="SlideToActView">
         <item name="text">SlideToActView</item>
-        <item name="text_size">@dimen/slidetoact_default_text_size</item>
+        <item name="slidetoact_text_size">@dimen/slidetoact_default_text_size</item>
         <item name="area_margin">@dimen/slidetoact_default_area_margin</item>
         <item name="inner_color">?android:colorBackground</item>
         <item name="outer_color">?colorAccent</item>
